--- a/Core/UdemyCarBook.Application/UdemyCarBook.Application.csproj
+++ b/Core/UdemyCarBook.Application/UdemyCarBook.Application.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\UdemyCarBook.Domain\UdemyCarBook.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
+  </ItemGroup>
+
 </Project>
