--- a/Core/UdemyCarBook.Application/UdemyCarBook.Application.csproj
+++ b/Core/UdemyCarBook.Application/UdemyCarBook.Application.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="MediatR" Version="12.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Mediator\Results\NewFolder\" />
+  </ItemGroup>
+
 </Project>
