--- a/Frontends/UdemyCarBook.WebUI/UdemyCarBook.WebUI.csproj
+++ b/Frontends/UdemyCarBook.WebUI/UdemyCarBook.WebUI.csproj
@@ -14,4 +14,9 @@
     <ProjectReference Include="..\UdemyCarBook.Dto\UdemyCarBook.Dto.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+
 </Project>
