--- a/Presentation/UdemyCarBook.WebApi/UdemyCarBook.WebApi.csproj
+++ b/Presentation/UdemyCarBook.WebApi/UdemyCarBook.WebApi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
       <PrivateAssets>all</PrivateAssets>
